Responded to edits through Chapter 5

--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -189,7 +189,7 @@ Both joint inversion and PFA attempt to identify patterns from sometimes dispara
 
 Supervised learning methods like regression, tree-based ensemble methods, and neural networks all need labeled example data, e.g., from wells or KGRA studies, for training predictive models. Unsupervised learning approaches like cluster analysis can learn directly from the structure of unlabeled input data. Studies applying both machine learning methodologies are revisiting PFA investigations that already have curated and archived data sets. For example, the PFA for the Great Basin region of Nevada originally combined nine data sets (or ``features'') by a grouping-and-weighting workflow to determine favorability for blind geothermal systems \citep{faulds_progress_2017}. As more data were acquired and previous features transformed or refined, the data progressively grew to over 20 feature layers \citep{brown_machine_2020, faulds_discovering_2019}. A proof of concept \acrlong{ann} (\acrshort{ann}) successfully reproduced the original PFA favorability map \citep{brown_machine_2020}, and further efforts illustrated value in applying more advanced algorithms like \acrlong{pca} (\acrshort{pca}) paired with $k$-means clustering \citep{smith_characterizing_2021} and a probabilistic neural network for prediction with parameter uncertainty \citep{brown_personal_2021}.
 
-In another example, \citet{bielicki_hydrogeolgic_2015} defined play fairways in Southwestern \acrlong{nm} (\acrshort{nm}) using a combination of 12 geologic, geophysical, and geochemical features to describe fluid, heat, and permeability risk elements. A subsequent project expanded this data set to 20 features and used a semi-supervised PCA and k-means clustering framework to define KGRA-associated groupings \citep{pepin_new_2019}. The study found each KGRA cluster correlated strongly with four regional physiographic provinces, i.e. regions of unique physical geography, in Southwestern NM: the Basin and Range, Colorado Plateau, Mogollon-Datil Volcanic Field, and Rio Grande Rift \citep{pepin_new_2019}. A separate effort led by LANL tested an unsupervised learning method, non-negative matrix factorization with $k$-means clustering, using a 22-feature data set \citep{vesselinov_discovering_2020}. This method determines feature signatures for each cluster, and results suggest each physiographic province may have its own unique set of features that signal the presence of hidden geothermal resources. 
+In another example, \citet{bielicki_hydrogeolgic_2015} defined play fairways in Southwestern \acrlong{nm} (\acrshort{nm}) using a combination of 12 geologic, geophysical, and geochemical features to describe fluid, heat, and permeability risk elements. A subsequent project expanded this data set to 20 features and used a semi-supervised PCA and K-means clustering framework to define KGRA-associated groupings \citep{pepin_new_2019}. The study found each KGRA cluster correlated strongly with four regional physiographic provinces, i.e. regions of unique physical geography, in Southwestern NM: the Basin and Range, Colorado Plateau, Mogollon-Datil Volcanic Field, and Rio Grande Rift \citep{pepin_new_2019}. A separate effort led by LANL tested an unsupervised learning method, non-negative matrix factorization with $k$-means clustering, using a 22-feature data set \citep{vesselinov_discovering_2020}. This method determines feature signatures for each cluster, and results suggest each physiographic province may have its own unique set of features that signal the presence of hidden geothermal resources. 
 
 In all studies conducted thus far for Southwestern New Mexico, geothermal favorability models provide a deterministic view of problem. This thesis reinvestigates the NM study area with a focus on the variety of uncertainties involved in a machine learning approach, as well as how those uncertainties can impact the final model results and choices made by geothermal project decision-makers.
 
