--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,31 @@
 
+@inproceedings{nair_rectified_2010,
+	address = {Madison, WI, USA},
+	series = {{ICML}'10},
+	title = {Rectified linear units improve restricted boltzmann machines},
+	isbn = {978-1-60558-907-7},
+	abstract = {Restricted Boltzmann machines were developed using binary stochastic hidden units. These can be generalized by replacing each binary unit by an infinite number of copies that all have the same weights but have progressively more negative biases. The learning and inference rules for these "Stepped Sigmoid Units" are unchanged. They can be approximated efficiently by noisy, rectified linear units. Compared with binary units, these units learn features that are better for object recognition on the NORB dataset and face verification on the Labeled Faces in the Wild dataset. Unlike binary units, rectified linear units preserve information about relative intensities as information travels through multiple layers of feature detectors.},
+	urldate = {2021-08-16},
+	booktitle = {Proceedings of the 27th {International} {Conference} on {International} {Conference} on {Machine} {Learning}},
+	publisher = {Omnipress},
+	author = {Nair, Vinod and Hinton, Geoffrey E.},
+	month = jun,
+	year = {2010},
+	pages = {807--814},
+}
+
+@article{kutasov_estimation_2009,
+	title = {Estimation of geothermal gradients from single temperature log-field cases},
+	volume = {6},
+	issn = {1742-2132},
+	number = {2},
+	journal = {Journal of geophysics and engineering},
+	author = {Kutasov, IM and Eppelbaum, LV},
+	year = {2009},
+	note = {Publisher: Oxford University Press},
+	pages = {131--135},
+}
+
 @article{prensky_temperature_1992,
 	title = {Temperature measurements in boreholes-{An} overview of engineering and scientific applications},
 	volume = {33},
@@ -2189,7 +2216,7 @@ This project was supported by an American Recovery and Reinvestment Act (ARRA) g
 	pages = {406--413},
 }
 
-@article{lautze_play_2017,
+@article{lautze_play_2017-1,
 	title = {Play fairway analysis of geothermal resources across the {State} of {Hawaii}: 1. {Geological}, geophysical, and geochemical datasets},
 	volume = {70},
 	issn = {0375-6505},
