--- a/templates/chap7.tex
+++ b/templates/chap7.tex
@@ -1,8 +1,10 @@
 \chapter{Discussion}\label{ch7:discuss}
 \label{ch7:discussion}
+
 Risk acts as a significant barrier to the adoption of geothermal as part of a larger energy portfolio for commercial oil \& gas companies. Here, the word \textit{risk} refers to the potential for shortfalls in performance with respect to established requirements, characterized by a probability of occurrence and consequence of failure \citep{nasa_s3001_2017, malone_development_2004}.  Companies considering investments in geothermal want to minimize risk exposure, so strategies to mitigate this risk will naturally act as enablers to geothermal growth during the on-going energy transition.
 
 \section{Field Lifecycle}\label{ch7:field_lifecycle}
+
 Maturing a geothermal asset from initial concept through site decommissioning represents a complex project lifecycle spanning up to several decades in length. Figure \ref{fig:geothermal_field_lifecycle} illustrates the decomposition of a geothermal field lifecycle into a level 1 process flow that mimics that of a typical hydrocarbon field. The level 2 decomposition describes a work breakdown structure, each step with its own inherent risks. Here, the primary play risk elements for geothermal introduced in Section \ref{ch2:sysfund} have been reframed as four components: heat, permeability, fluids, and seal. Each appear in both the Exploration and Appraisal phases of the project. 
 
 \begin{figure}
@@ -17,6 +19,7 @@ The red dotted outline in Figure \ref{fig:geothermal_field_lifecycle} illustrate
 Cost modeling similarly offers benefits for risk mitigation in the geothermal project lifecycle, as illustrated with the dashed lines in Figure \ref{fig:geothermal_field_lifecycle}. Surface plant construction and drilling activities take place during the development phase and continue into production as thermal decline or market forces trigger field management responses. Rather than treat the extent of these activities as known unknowns, characterizing and including them in flexible economic models offers the opportunity to assess their impact and scenario-test for the optimal field strategy. As the analysis in Chapter \ref{ch6:cm_results} showed, models can include local uncertainties, e.g., geothermal gradient or decline rate, as well as broader risks like a carbon tax or national electrification. The red long-dashed line in Figure \ref{fig:geothermal_field_lifecycle} surrounds factors considered by the cost model in Chapters \ref{ch4:cm_prep} and \ref{ch6:cm_results}. The gray dashed line depicts additional aspects of the development and production phases that could also be characterized in a cost model with distributions and decision rules to determine project viability or refine field strategy.
 
 \section{Role of Uncertainty}\label{ch7:uncertainty_role}
+
 Uncertainty exists, as does the opportunity to include it in a larger decision-making process for geothermal adoption. In the exploration phase, feature standard errors and maps of entropy --- or another measure of collective uncertainty --- can influence project choices. Observing pervasively high standard errors for a data layer (see Section \ref{ch3:measure_uncertainty}) raises the question of whether that data should be re-acquired using different tools or survey methods, or if better quality data might be available for use or purchase. And zones of high entropy in measurement uncertainty highlight areas that need additional attention. Is the entropy a result of insufficient data to train machine learning models, leading to poor discrimination ability for the predicted classes? Or are the data in areas of high entropy simply inconclusive or poorly conditioned? Pursuing these questions helps frame a refined project plan for the early phases of the field lifecycle. In this scenario, time and resource allocations to data science and data engineering (using existing data), field studies and data acquisition (supplementing existing data), or exploration of more certain areas are expressly driven by the data.
 
 If an ensemble of models is considered, structural or model uncertainty (see Section \ref{ch3:structural_uncertainty}) can direct efforts around how to approach machine learning prediction. For example, when entropy appears high throughout the area of interest (AOI), and most of the models show reasonable agreement except for one or two, this could justify down-selecting those models and re-evaluating from the reduced ensemble. But if high variance is observed across many models, this might indicate the input data insufficiently describes the system. Likewise, predictions from probabilistic models that show high parameter uncertainty in the AOI (Section \ref{ch3:param_uncertainty}) should be treated as suspect and the model refactored or retrained on a larger data set. Insights like these mitigate the risk of over-confidence in under-performing models, potentially avoiding a poorly-placed exploration well based on those models further down the line.
@@ -24,6 +27,7 @@ If an ensemble of models is considered, structural or model uncertainty (see Sec
 For cost models, directly incorporating uncertainty serves to counter the classic misconception that applying average values to elements of a complex system will lead to an average system result \citep[Flaw of Averages,][p.\ 17-19]{de_neufville_flexibility_2011}. Instead, using variable distributions and generating expected values from multiple model realizations provides accurate median estimates and describes the spread of potential results. As discussed in Section \ref{ch6:cost_model_metrics}, target curves and percentiles defining Value at Risk and Value at Gain offer a richer set of metrics for model comparison. Using these metrics can reveal the combination of strategic choices for a geothermal project timeline and execution that mitigate the risk of project losses and target the greatest upside opportunity.
 
 \section{Risk Analysis}\label{ch7:risk_analysis}
+
 One approach to project risk assessment evaluates risks and mitigation actions with a scorecard tracking likelihood (Table \ref{tab:likelihood_table}) and consequence (Table \ref{tab:consequence_table}) of individual risks before and after actions are taken \citep{malone_development_2004}. The process begins with creating a risk log as shown in Table \ref{tab:risk_log}. This table can be constructed through a variety of risk identification methods, including formal hazard analysis, models and simulations, or group brainstorming \citep{nasa_s3001_2017}. Even the act of populating this table adds value to a project by building alignment on group judgment and assumptions regarding risk relevance and potential impact.
 
 \begin{table}[!htp]
@@ -87,21 +91,21 @@ Having captured risks and ordered them by their risk score, the project team nex
     \hline
     \multicolumn{1}{|c|}{ID} & Mitigated Likelihood & Mitigated Consequence & Mitigated Risk & Risk Reduction & Mitigation Action \\ \hline
     \rowcolor[HTML]{E7E6E6} 
-    EXP1 & 1 & 2 & 2 & 10 & Use ML model predictions to reduce costs in exploration \\ \hline
+    EXP1 & 2 & 2 & 4 & 8 & Use ML model predictions to reduce costs in exploration \\ \hline
     \rowcolor[HTML]{E7E6E6} 
-    EXP2 & 1 & 3 & 3 & 13 & Use ML for baseline model, acquire data based on importances \\ \hline
+    EXP2 & 2 & 3 & 6 & 10 & Use ML for baseline model, acquire data based on importances \\ \hline
     EXP3 & 2 & 3 & 6 & 3 & Engage with regulators early to fast-track permitting \\ \hline
     DRL1 & 3 & 3 & 9 & 3 & Secure rig early and pre-plan for future drilling needs \\ \hline
     \rowcolor[HTML]{E7E6E6} 
-    DRL2 & 1 & 3 & 3 & 6 & Use ML to identify high gradient areas faster, shallower drilling \\ \hline
+    DRL2 & 2 & 3 & 6 & 3 & Use ML to identify high gradient areas faster, shallower drilling \\ \hline
     DRL4 & 2 & 2 & 4 & 2 & Use service companies with high-Temp equipment track record \\ \hline
     \rowcolor[HTML]{E7E6E6} 
     PRD1 & 1 & 3 & 3 & 9 & Cost modeling for optimized spending and return \\ \hline
     PRD4 & 3 & 2 & 6 & 6 & Regularly re-drill wells or re-stimulate reservoir \\ \hline
     \rowcolor[HTML]{E7E6E6}
-    PRD5 & 2 & 2 & 4 & 4 & Flexibility in power generation based on market \\ \hline
+    PRD5 & 2 & 3 & 6 & 2 & Flexibility in power generation based on market \\ \hline
     \rowcolor[HTML]{E7E6E6}
-    PRD6 & 1 & 2 & 2 & 10 & Flexible design for demand-triggered capacity changes \\ \hline
+    PRD6 & 1 & 3 & 3 & 9 & Flexible design for demand-triggered capacity changes \\ \hline
     \end{tabular}}
 \caption[Geothermal mitigation log]{Proposed mitigations for risks listed in Table \ref{tab:risk_log} and the change in risk associated with those mitigations. Risk values are likelihood $\times$ consequence. Shaded mitigations include one of the options described in this thesis and appear in Figure \ref{fig:risk_matrix}. Adapted from NASA S3001 Guidelines for Risk Management, v.G (Malone \& Moses, 2004). }
 \label{tab:mitigation_log}
@@ -116,11 +120,12 @@ The risk scorecard methodology plots risks before and after mitigation on a \({5
 \label{fig:risk_matrix}
 \end{figure}
 
-Figure \ref{fig:risk_matrix} illustrates a risk matrix based on the highlighted rows from Table \ref{tab:mitigation_log}. Arrows map the original risk to mitigated risk. Each of these examples utilizes mitigation strategies described in the earlier chapters of this thesis. Although many other geothermal project risks exist than those described here, what this work demonstrates is the ability \textit{to} reduce risk \textit{by} rapidly applying low-cost assessments throughout the lifecycle of a geothermal field \textit{using} readily-available data. Emphasis is on the to-by-using construct of a classic system problem statement.
+Figure \ref{fig:risk_matrix} illustrates a risk matrix based on the highlighted rows from Table \ref{tab:mitigation_log}. Arrows map the original risk to mitigated risk. Each of these examples utilizes mitigation strategies described in the earlier chapters of this thesis. Appendix \ref{app:C_risk_log} provides additional detail on the choices of likelihood and consequence scores for these risks both before and after applying the proposed strategies. The scores are also listed Tables \ref{tab:risk_log} and \ref{tab:mitigation_log}. Although many other geothermal project risks exist than those described here, what this work demonstrates is the ability \textit{to} reduce risk \textit{by} rapidly applying low-cost assessments throughout the lifecycle of a geothermal field \textit{using} readily-available data. Emphasis is on the to-by-using construct of a classic system problem statement.
 
 At the exploration stage, machine-learning PFA assessments feed directly into risking processes already common in oil \& gas companies \citep{nash_adaptation_2015}. This reduces barriers around deployment and adoption, and the risk reduction in Figure \ref{fig:risk_matrix} clearly demonstrates the potential value gained. In the development and production stages, use of scenario-testing with flexible cost models mitigates risk while possibly revealing new, more profitable means of operating a geothermal field. And doing so with spreadsheet-based tools means petroleum industry project managers already have the technology and capability to apply these models for decision-support and risk-mitigation today. 
 
 \section{Great Opportunity}\label{ch7:opportunity}
+
 Oil \& gas companies are uniquely positioned to embrace geothermal, including EGS, as a low-carbon baseload option in the energy transition. Consider some present-day barriers to broad commercial development of EGS described in the GeoVision study: 
 \begin{enumerate}
     \item \textit{Companies advancing EGS are small, lacking significant operating capital and the ability to tackle large-scale projects (>100 MW)} \citep{doughty_geovision_2018}. Oil \& gas companies have the working capital to take on larger, more expensive projects if those projects have the potential for long-term profitability.
